force-app/main/default/objects/Portfolio_Project__c/Portfolio_Project__c.object-meta.xml
<CustomObject>
    <label>Portfolio Project</label>
    <pluralLabel>Portfolio Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Project Title</label>
        <type>Text</type>
    </nameField>
</CustomObject>