force-app/main/default/objects/Portfolio_Project__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>Html</type> <visibleLines>25</visibleLines>
    <length>32768</length>
</CustomField>