force-app/main/default/objects/Portfolio_Project__c/fields/Repository_URL__c.field-meta.xml
<CustomField>
    <fullName>Repository_URL__c</fullName>
    <label>Repository URL</label>
    <type>Url</type>
</CustomField>